--- a/css/basic.css
+++ b/css/basic.css
@@ -41,10 +41,10 @@ div.sister p {
 div.sister hr {
     display:none;
 }
-div.near {
+div.near, div.definition {
     background-color:#efe;
 }
-div.near p {
+div.near p, div.definition {
     margin-top: 0;
 }
 
