--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -402,6 +402,10 @@ div.sidebar {
     margin: 1ex;
 }
 
+.small {
+    font-size: 80%;
+}
+
 dl.irc dt { width:20ex; float:left; text-align:right; clear:left; }
 dl.irc dt span.time { float:left; }
 dl.irc dd { margin-left:22ex; }
