Public domain notice.

--- a/css/beige.css
+++ b/css/beige.css
@@ -1,5 +1,8 @@
 /* Color Scheme: links: #851; visited links: #542; background #aa8;
-   Plus black, white, and #333 for headers */
+   Plus black, white, and #333 for headers
+
+   This file is in the public domain.
+*/
 
 body {
 	font-family: "Times New Roman",Georgia,Times;
