--- a/css/pedia.css
+++ b/css/pedia.css
@@ -87,10 +87,30 @@ div.footer span.edit br {
 div.footer span.edit a {
     padding-right: 1em;
 }
+/* But the talk link goes elsewhere */
+body.top div.footer span.edit a.original,
+body.top div.footer span.edit a.comment {
+    position: absolute;
+    top: 25px; 
+}
+/* On the edit page, the buttons (6th paragraph) go up */
+body.top div.edit {
+    margin-top: 30px;
+}
+body.top div.edit {
+    margin-top: 30px;
+}
+body.top p + p + p + p + p + p {
+    position: absolute;
+    top: 140px;
+}
+body.top p + p + p + p + p + p + p { 
+    position: static;
+}
 /* Messages */
 div.message {
     position: absolute;
-    top: 70px;
+    top: 1px;
     left: 206px;
     color: red;
 }
