--- a/css/beige.css
+++ b/css/beige.css
@@ -16,6 +16,23 @@ body {
 		font-size:12pt;
 	}
 }
+
+/* iPhone */
+
+@media only screen and (max-device-width: 480px) {
+	body { font-size: 200%; }
+}
+
+/* iPad */
+
+@media only screen and (min-device-width: 481px) and (max-device-width: 900px) {
+	body  { font-size: 150%; }
+	textarea,input { font-size: 100%; }
+	img  { max-width: 550px !important; }
+}
+
+
+
 div.browse {
 	min-height: 3em;
 }
@@ -41,6 +58,14 @@ div.commentshown {
 }
 div.commenthidden { display:none; }
 div.commentshown { display:block; }
+/* comment pages with username, homepage, and email subscription */
+.comment span { display: block; }
+.comment span label {
+	display: inline-block; width: 10em;
+}
+input#mail, input#homepage, input#username {
+	display: inline-block; width: 20em;
+}
 
 h1 {
 	font-weight: bold;
@@ -63,9 +88,10 @@ h2 {
 	font-weight: bold;
 	color: white;
 	background-color: #000;
-	width: 98%;
+	/* width: 98%; */
 	font-size: 110%;
 	padding: 0.2em;
+	clear: both;
 }
 a:link {
 	font-weight: bold;
@@ -89,21 +115,47 @@ div.image { display: inline; margin: 1em; font-size: 90%; text-align: center; }
 .right { float: right; margin-left: 1em; }
 div.right .right { float: none; }
 div.left .left { float: none; }
+.caption { padding: 0 1em; }
+.license { font-size: small; }
+.aside {
+	font-size: small;
+	width: 30%;
+	float: right;
+	margin-left: 1em;
+	margin-bottom: 1em;
+	padding-left: 1em;
+}
+.aside img.smiley { height: 1em; }
+.narrow {
+	width: 70%;
+}
 
 a img { border: 1px solid #333; }
 .fit img { width: 80%; text-align: center; margin: 2em 8%; }
 .half img { width: 50%; height: 50%; text-align: center; margin: 2em 8%; }
 .noborder img { border: none; }
+.twenty img { max-width: 20em; }
 
 em.underline { font-weight: bold; }
 .bar a { padding-right: 1em; }
 textarea { width:100%; }
 div.edit { padding-right: 1em; }
-img.logo { float: right; clear: right; border-style:none; }
+img.logo {
+	float: right;
+	clear: right;
+	border-style:none;
+	margin-left: 1em;
+	margin-bottom: 1ex;
+	border: 1px solid black;
+}
 div.diff { padding-left:5%; padding-right:5%; }
 div.old { background-color:#FFFFAF; }
 div.new { background-color:#CFFFCF; }
-div.message { background-color:#FEE; }
+/* div.message { background-color:#FEE; } */
+div.message {
+	background-color: inherit;
+	font-size: smaller;
+}
 table.history { border-style:none; }
 td.history { border-style:none; }
 span.result { font-size:larger; }
@@ -132,6 +184,10 @@ table.user {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
  }
+div.aside table.user {
+	    margin: 1em 0;
+	    padding: 0;
+}
 table.user td, table.user th {
     border-style: none;
     padding:5px 10px;
@@ -153,6 +209,12 @@ table.user td.mark { background-color:yellow; }
 	}
 }
 
+/* Help */
+
+.edit table {
+	font-size: small;
+}
+
 /* Calendar */
 div.month { margin:0; padding:0; font-size:x-small; float:right; }
 div.content div.month { float:none; }
@@ -164,7 +226,7 @@ div.month span.title a { font: inherit; }
 div.month a.local { font-weight: bold; }
 div.month a.local:link { color: #562; }
 div.month a.local:visited { color: #542; }
-div.month a.today { font-weight: bold; color: #fff; }
+div.month a.today { background-color: #faa; }
 div.month span.title a.local { font-weight: normal; color: #842; }
 @media print {
 	div.month { display: none; }
