Google +1 link without border

--- a/css/alex-2012.css
+++ b/css/alex-2012.css
@@ -83,6 +83,12 @@ span.bar a {
     margin-right: 1ex;
 }
 
+/* Google +1 button */
+
+a#plus1 img {
+    border: none;
+}
+
 /* search box in the top bar */
 
 form.tiny, form.tiny p {
