--- a/css/alex-2012.css
+++ b/css/alex-2012.css
@@ -336,6 +336,7 @@ div.image span.caption {
 
 .left { float:left; margin-right: 1em; }
 .right { float:right; margin-left: 1em; }
+.half a img { height: 50%; width: 50%; }
 div.left .left, div.right .right {
     float:none;
 }
