Use smaller headers

--- a/css/oddmuse-2013.css
+++ b/css/oddmuse-2013.css
@@ -28,7 +28,7 @@ body {
     padding:2% 5%;
     margin:0;
     font-family: "Gentium Basic", "Bookman Old Style", "Times New Roman", serif;
-    font-size: 18pt;
+    font-size: 16pt;
 }
 
 div.header h1 {
@@ -129,9 +129,15 @@ dd {
     margin-bottom:1ex;
 }
 
-textarea { width:100%; height:80%; }
+textarea {
+    width:100%;
+    height:80%;
+    font-size: 12pt;
+}
 textarea#summary { height: 3em; }
-
+input {
+    font-size: 12pt;
+}
 div.image span.caption {
     margin: 0 1em;
 }
