--- a/css/alex-2012.css
+++ b/css/alex-2012.css
@@ -74,6 +74,25 @@ h1 a:visited, h2 a:visited, h3 a:visited {
     color: inherit;
 }
 
+/* for download buttons and the like */
+
+.button {
+    display: inline-block;
+    font-size: 150%;
+    cursor: pointer;
+    padding: 0.3em 0.5em;
+    text-shadow: 0px -1px 0px #ccc;
+    background-color: #cfa;
+    border: 1px solid #9d8;
+    border-radius: 5px;
+    box-shadow: 0px 1px 3px white inset, 0px 1px 3px black;
+}
+
+.button a {
+    text-decoration: none;
+    font-weight: normal;
+}
+
 /* stop floating content from flowing over the footer */
 
 hr {
