--- a/css/alex-2012.css
+++ b/css/alex-2012.css
@@ -88,6 +88,11 @@ h1 a:visited, h2 a:visited, h3 a:visited {
     box-shadow: 0px 1px 3px white inset, 0px 1px 3px black;
 }
 
+.button .icon {
+    color: #363;
+    text-shadow: 0px -1px 1px white, 0px 1px 3px #666;
+}
+
 .button a {
     text-decoration: none;
     font-weight: normal;
