--- a/css/oddmuse-2013.css
+++ b/css/oddmuse-2013.css
@@ -218,6 +218,11 @@ pre {
     margin-right: 2em;
     white-space: pre;
     overflow:hidden;
+    white-space: pre-wrap;      /* CSS 3 */
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap;     /* Opera 4-6 */
+    white-space: -o-pre-wrap;   /* Opera 7 */
+    word-wrap: break-word;      /* Internet Explorer 5.5+ */
 }
 
 tt, pre, code {
