--- a/css/alex-2014.css
+++ b/css/alex-2014.css
@@ -235,7 +235,7 @@ a img {
 
 /* search box in the top bar */
 
-form.tiny, form.tiny p {
+.tiny, .tiny * {
     display: inline;
     white-space: nowrap;
 }
