--- a/css/alex-2014.css
+++ b/css/alex-2014.css
@@ -3,7 +3,7 @@
   font-family: 'Noticia Text';
   font-style: normal;
   font-weight: 400;
-  src: local('Noticia Text'), local('NoticiaText-Regular)'), url('fonts/NoticiaText-Regular.woff') format('woff');
+  src: local('Noticia Text'), local('NoticiaText-Regular)'), url('/fonts/NoticiaText-Regular.woff') format('woff');
   unicode-range: U+0102-0103, U+1EA0-1EF1, U+20AB;
 }
 /* latin-ext */
@@ -11,7 +11,7 @@
   font-family: 'Noticia Text';
   font-style: normal;
   font-weight: 400;
-  src: local('Noticia Text'), local('NoticiaText-Regular)'), url('fonts/NoticiaText-Regular.woff') format('woff');
+  src: local('Noticia Text'), local('NoticiaText-Regular)'), url('/fonts/NoticiaText-Regular.woff') format('woff');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -19,7 +19,7 @@
   font-family: 'Noticia Text';
   font-style: normal;
   font-weight: 400;
-  src: local('Noticia Text'), local('NoticiaText-Regular)'), url('fonts/NoticiaText-Regular.woff') format('woff');
+  src: local('Noticia Text'), local('NoticiaText-Regular)'), url('/fonts/NoticiaText-Regular.woff') format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 /* vietnamese */
@@ -27,7 +27,7 @@
   font-family: 'Noticia Text';
   font-style: normal;
   font-weight: 700;
-  src: local('Noticia Text Bold'), local('NoticiaText-Bold)'), url('fonts/NoticiaText-Bold.woff') format('woff');
+  src: local('Noticia Text Bold'), local('NoticiaText-Bold)'), url('/fonts/NoticiaText-Bold.woff') format('woff');
   unicode-range: U+0102-0103, U+1EA0-1EF1, U+20AB;
 }
 /* latin-ext */
@@ -35,7 +35,7 @@
   font-family: 'Noticia Text';
   font-style: normal;
   font-weight: 700;
-  src: local('Noticia Text Bold'), local('NoticiaText-Bold)'), url('fonts/NoticiaText-Bold.woff') format('woff');
+  src: local('Noticia Text Bold'), local('NoticiaText-Bold)'), url('/fonts/NoticiaText-Bold.woff') format('woff');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -43,7 +43,7 @@
   font-family: 'Noticia Text';
   font-style: normal;
   font-weight: 700;
-  src: local('Noticia Text Bold'), local('NoticiaText-Bold)'), url('fonts/NoticiaText-Bold.woff') format('woff');
+  src: local('Noticia Text Bold'), local('NoticiaText-Bold)'), url('/fonts/NoticiaText-Bold.woff') format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 /* vietnamese */
@@ -51,7 +51,7 @@
   font-family: 'Noticia Text';
   font-style: italic;
   font-weight: 400;
-  src: local('Noticia Text Italic'), local('NoticiaText-Italic)'), url('fonts/NoticiaText-Italic.woff') format('woff');
+  src: local('Noticia Text Italic'), local('NoticiaText-Italic)'), url('/fonts/NoticiaText-Italic.woff') format('woff');
   unicode-range: U+0102-0103, U+1EA0-1EF1, U+20AB;
 }
 /* latin-ext */
@@ -59,7 +59,7 @@
   font-family: 'Noticia Text';
   font-style: italic;
   font-weight: 400;
-  src: local('Noticia Text Italic'), local('NoticiaText-Italic)'), url('fonts/NoticiaText-Italic.woff') format('woff');
+  src: local('Noticia Text Italic'), local('NoticiaText-Italic)'), url('/fonts/NoticiaText-Italic.woff') format('woff');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -67,7 +67,7 @@
   font-family: 'Noticia Text';
   font-style: italic;
   font-weight: 400;
-  src: local('Noticia Text Italic'), local('NoticiaText-Italic)'), url('fonts/NoticiaText-Italic.woff') format('woff');
+  src: local('Noticia Text Italic'), local('NoticiaText-Italic)'), url('/fonts/NoticiaText-Italic.woff') format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 /* vietnamese */
@@ -75,7 +75,7 @@
   font-family: 'Noticia Text';
   font-style: italic;
   font-weight: 700;
-  src: local('Noticia Text Bold Italic'), local('NoticiaText-BoldItalic)'), url('fonts/NoticiaText-BoldItalic.woff') format('woff');
+  src: local('Noticia Text Bold Italic'), local('NoticiaText-BoldItalic)'), url('/fonts/NoticiaText-BoldItalic.woff') format('woff');
   unicode-range: U+0102-0103, U+1EA0-1EF1, U+20AB;
 }
 /* latin-ext */
@@ -83,7 +83,7 @@
   font-family: 'Noticia Text';
   font-style: italic;
   font-weight: 700;
-  src: local('Noticia Text Bold Italic'), local('NoticiaText-BoldItalic)'), url('fonts/NoticiaText-BoldItalic.woff') format('woff');
+  src: local('Noticia Text Bold Italic'), local('NoticiaText-BoldItalic)'), url('/fonts/NoticiaText-BoldItalic.woff') format('woff');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -91,13 +91,13 @@
   font-family: 'Noticia Text';
   font-style: italic;
   font-weight: 700;
-  src: local('Noticia Text Bold Italic'), local('NoticiaText-BoldItalic)'), url('fonts/NoticiaText-BoldItalic.woff') format('woff');
+  src: local('Noticia Text Bold Italic'), local('NoticiaText-BoldItalic)'), url('/fonts/NoticiaText-BoldItalic.woff') format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
 @font-face {
   font-family: 'Symbola';
-  src: local('Symbola'), url('fonts/Symbola.woff') format('woff');
+  src: local('Symbola'), url('/fonts/Symbola.woff') format('woff');
 }
 
 body, rss {
@@ -239,10 +239,21 @@ a img {
     display: inline;
     white-space: nowrap;
 }
-form.tiny input {
+/* wrap on the iphone */
+@media media only screen and (max-device-width: 480px) {
+    div.tiny {
+	white-space: normal;
+    }
+    .tiny input {
+	max-width: 10ex;
+    }
+}
+
+.tiny input {
     padding: 0;
     width: 10ex;
     font-size: 80%;
+    line-height: 125%;
 }
 
 /* code */
