alex-2014.css: Symbola for textareas

--- a/css/alex-2014.css
+++ b/css/alex-2014.css
@@ -260,8 +260,8 @@ input {
 
 /* code */
 
-pre, code, tt {
-    font-family: "Andale Mono", Monaco, "Courier New", Courier, monospace;
+textarea, pre, code, tt {
+    font-family: "Andale Mono", Monaco, "Courier New", Courier, monospace, "Symbola";
     font-size: 80%;
 }
 
