--- a/css/light.css
+++ b/css/light.css
@@ -40,15 +40,9 @@ body {
 
 /* general */
 .browse { min-height: 3em; }
-/* .header form, .header p { margin: 0; display: inline; white-space: nowrap; }*/
-.header { padding-right: 10em; }
-.header form.search { position: absolute; top: 0; right: 2em; }
-.header form.matchingpages { position: absolute; top: 2em; right: 2em; }
-label[for="searchlang"], #searchlang, input[type="submit"] { display: none; }
-.header input { width: 10ex; }
-input { font-size: 80%; line-height: 125%; }
-}
-
+.header form, .header p { margin: 0; }
+.header input[type="submit"] { display: none; }
+.header input { width: 5em; font-size: 80%; }
 .footer { clear:both; font-size: 90%; }
 
 /* comments, footer */
